--- a/src/StockTradingSystem/fxml/finLoginUI.fxml
+++ b/src/StockTradingSystem/fxml/finLoginUI.fxml
@@ -115,7 +115,7 @@
                                           <Font size="28.0" />
                                        </font>
                                     </Label>
-                                    <JFXButton onAction="#gotoFinWork" ripplerFill="#3c0097" text="资金账户登录" textFill="WHITE">
+                                    <JFXButton ripplerFill="#3c0097" text="资金账户登录" textFill="WHITE">
                                        <font>
                                           <Font size="18.0" />
                                        </font>
