--- a/src/StockTradingSystem/fxml/finMainUI.fxml
+++ b/src/StockTradingSystem/fxml/finMainUI.fxml
@@ -14,6 +14,8 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -208,6 +210,28 @@
                                           </StackPane>
                                        </children>
                                     </HBox>
+                                    <VBox prefHeight="200.0" prefWidth="100.0">
+                                       <children>
+                                          <StackPane prefHeight="385.0" prefWidth="738.0" />
+                                          <StackPane prefHeight="81.0" prefWidth="738.0">
+                                             <children>
+                                                <JFXButton onAction="#exitFinsys" style="-fx-background-color: #ff7af6;" text="退出资金账户系统" textFill="WHITE">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                   <ripplerFill>
+                                                      <LinearGradient endX="1.0" endY="1.0">
+                                                         <stops>
+                                                            <Stop color="WHITE" />
+                                                            <Stop color="#ff7af6" offset="1.0" />
+                                                         </stops>
+                                                      </LinearGradient>
+                                                   </ripplerFill>
+                                                </JFXButton>
+                                             </children>
+                                          </StackPane>
+                                       </children>
+                                    </VBox>
                                  </children>
                               </StackPane>
                            </children>
