--- a/src/StockTradingSystem/fxml/finMainUI.fxml
+++ b/src/StockTradingSystem/fxml/finMainUI.fxml
@@ -84,6 +84,19 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="30.0" />
                                  </padding>
                               </VBox>
+                              <JFXButton onAction="#exitFinsys" prefHeight="36.0" prefWidth="137.0" style="-fx-background-color: #ff7af6;" text="退出资金账户系统" textFill="WHITE">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                                 <ripplerFill>
+                                    <LinearGradient endX="1.0" endY="1.0">
+                                       <stops>
+                                          <Stop color="WHITE" />
+                                          <Stop color="#ff7af6" offset="1.0" />
+                                       </stops>
+                                    </LinearGradient>
+                                 </ripplerFill>
+                              </JFXButton>
                            </children>
                            <effect>
                               <DropShadow blurType="GAUSSIAN" color="#4500c42f" height="36.49" radius="19.83" spread="0.66" width="44.83" />
@@ -127,7 +140,8 @@
                                                          </VBox.margin>
                                                          <image>
                                                             <Image url="@../img/human_icon/securities.jpg" />
-                                                         </image></ImageView>
+                                                         </image>
+                                                      </ImageView>
                                                       <Label alignment="CENTER" prefHeight="15.0" prefWidth="219.0" text="注册账户">
                                                          <font>
                                                             <Font name="Microsoft YaHei Light" size="24.0" />
@@ -156,7 +170,8 @@
                                                          </image>
                                                          <VBox.margin>
                                                             <Insets left="5.0" top="5.0" />
-                                                         </VBox.margin></ImageView>
+                                                         </VBox.margin>
+                                                      </ImageView>
                                                       <Label alignment="CENTER" prefHeight="64.0" prefWidth="219.0" text="资金账户业务">
                                                          <font>
                                                             <Font name="Microsoft YaHei Light" size="24.0" />
@@ -210,28 +225,6 @@
                                           </StackPane>
                                        </children>
                                     </HBox>
-                                    <VBox prefHeight="200.0" prefWidth="100.0">
-                                       <children>
-                                          <StackPane prefHeight="385.0" prefWidth="738.0" />
-                                          <StackPane prefHeight="81.0" prefWidth="738.0">
-                                             <children>
-                                                <JFXButton onAction="#exitFinsys" style="-fx-background-color: #ff7af6;" text="退出资金账户系统" textFill="WHITE">
-                                                   <font>
-                                                      <Font size="14.0" />
-                                                   </font>
-                                                   <ripplerFill>
-                                                      <LinearGradient endX="1.0" endY="1.0">
-                                                         <stops>
-                                                            <Stop color="WHITE" />
-                                                            <Stop color="#ff7af6" offset="1.0" />
-                                                         </stops>
-                                                      </LinearGradient>
-                                                   </ripplerFill>
-                                                </JFXButton>
-                                             </children>
-                                          </StackPane>
-                                       </children>
-                                    </VBox>
                                  </children>
                               </StackPane>
                            </children>
